# docs/api_shop_v1.swagger.json
@@ -155,6 +155,38 @@
         ]
       }
     },
+    "/shop/v1/login": {
+      "post": {
+        "operationId": "ShopV1_Login",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/shopLoginResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/shopLoginRequest"
+            }
+          }
+        ],
+        "tags": [
+          "ShopV1"
+        ]
+      }
+    },
     "/shop/v1/order": {
       "post": {
         "operationId": "ShopV1_CreateOrder",
@@ -403,6 +435,28 @@
             "type": "object",
             "$ref": "#/definitions/shopProductForGetAll"
           }
+        }
+      }
+    },
+    "shopLoginRequest": {
+      "type": "object",
+      "properties": {
+        "login": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "shopLoginResponse": {
+      "type": "object",
+      "properties": {
+        "refreshToken": {
+          "type": "string"
+        },
+        "accessToken": {
+          "type": "string"
         }
       }
     },
